--- a/index.html
+++ b/index.html
@@ -3,24 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer sitio web</title>
+    <title>Perfil del Alumno</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 50px;
-            background-color: #f0f0f0;
+            background-color: #f9f9f9;
         }
         h1 {
             color: #3333cc;
         }
-        p {
+        h2 {
             color: #555555;
+        }
+        p {
+            color: #333333;
+            font-size: 1.1em;
+        }
+        a {
+            color: #cc3333;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <h1>¡Hola, mundo!</h1>
-    <p>Este es mi primer sitio publicado en GitHub Pages.</p>
+    <h1>Alumno: Lucía Costa López</h1>
+    <h2>Correo electrónico</h2>
+    <p>
+        Puedes contactarme en 
+        <a href="mailto:lucia.costa@udc.es">lucia.costa@udc.es</a>
+    </p>
+    <p>
+        Enlace al servicio: 
+        <a href="https://freedns.afraid.org" target="_blank">Free DNS</a>
+    </p>
 </body>
 </html>
+
